# two_wheels

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  diff_drive_hw_interface.xml  flash_esp32.sh  hw_interface.xml  package.xml  prepare_docker.sh  run_microros.sh  run_robot.sh  run_sim.sh  two_wheels.xml
behavior_tree_xml/: bump_go.xml
config/: ekf.yaml  mapper_params_online_async.yaml  nav2_params.yaml  two_wheels_controllers.yaml
docs/: 25GA_370_specs.md
docs/25GA_370/: 25GA_370_specs.md
firmware/: Arduino.cpp  Wheel.cpp  arduino.ino  arduino_tb6612fng.cpp
firmware/arduino/: Commands.h  Motor.cpp  Motor.h  MotorConfig.cpp  MotorConfig.h  arduino.ino  tb6612fng_25GA_370.ino
firmware/arduino_motor_driver/: Commands.h  Motor.cpp  Motor.h  arduino_motor_driver.ino
firmware/arduino_tb6612fng_25GA_370/: Commands.h  Motor.cpp  Motor.h  PIDController.cpp  PIDController.h  arduino_tb6612fng_25GA_370.ino  dc_motor_25GA_370_pulse_count.ino  dc_motoro_25GA_370_pulse_count.ino
firmware/diff_drive_hw_interface/: Arduino.cpp  Arduino.h  Arduino.hpp  DiffDrive.cpp  DiffDrive.h  Wheel.h  arduino_tb6612fng.hpp  serialib.h
firmware/hw_interface/: DiffDrive.cpp  DiffDrive.h
firmware/interface/: ArduinoFirmware.cpp  ArduinoFirmware.h  Firmware.h  MotorsOdom.h  SerialOps.cpp  SerialOps.h  serialib.cpp  serialib.h
include/diff_drive_hw_interface/: Wheel.h  arduino_wheels.hpp
include/two_wheels/: Wheel.h  arduino_wheels.hpp  visibility_control.h
launch/: common.launch.py  core.launch.py  navigation_launch.py  sim_two_wheels.launch.py  two_wheels.launch.py  view_two_wheels.launch.py
maps/: apt.data  apt.pgm  apt.yaml  apt_serial.data  map.pgm  map.yaml
rviz/: two_wheels.rviz
src/: arduino_wheels.cpp  bump_go.cpp  go_straight.cpp  is_clear.cpp  main.cpp  mapper.cpp  turn.cpp  velocity_remapper.cpp
test/: test_arduino_wheels.cpp
two_wheels_core/: CMakeLists.txt  README.md  package.xml  run_sim.sh
two_wheels_core/config/: ekf.yaml  mapper_params_online_async.yaml  two_wheels_controllers.yaml
two_wheels_core/firmware/docs/25GA_370/: 25GA_370_specs.md
two_wheels_core/firmware/esp32dev-microros/: platformio.ini
two_wheels_core/firmware/esp32dev-microros/extra_packages/two_wheels_interfaces/: CMakeLists.txt  package.xml
two_wheels_core/firmware/esp32dev-microros/extra_packages/two_wheels_interfaces/msg/: MotorsOdom.msg
two_wheels_core/firmware/esp32dev-microros/src/: DCMotor.cpp  DCMotor.h  FourPinStepperMotor.cpp  FourPinStepperMotor.h  esp32.ino
two_wheels_core/firmware/hw_interface/: DiffDrive.cpp  DiffDrive.h  Wheel.h
two_wheels_core/launch/: core.launch.py  sim_two_wheels.launch.py  two_wheels.launch.py
two_wheels_core/rviz/: two_wheels.rviz
two_wheels_core/src/: bump_go.cpp
two_wheels_core/urdf/: joints.macro.xacro  materials.xacro  robot.urdf.xacro  robot.xacro  robot_core.xacro
two_wheels_core/urdf/gazebo/: gazebo.xacro  gazebo_control.xacro
two_wheels_core/urdf/meshes/: base_link.stl  front_left_wheel.stl  front_right_wheel.stl  lidar_link.stl  rear_left_wheel.stl  rear_right_wheel.stl
two_wheels_interfaces/msg/: MotorsOdom.msg
urdf/: common.xacro  gazebo.xacro  gazebo_control.xacro  joints.macro.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro  two_wheels.urdf.xacro
urdf/gazebo/: common_inertias.xacro  gazebo_control.xacro  imu.xacro  lidar.xacro  sonar.xacro
urdf/two_wheels/: gazebo_control.xacro  two_wheels_macro.ros2_control.xacro  two_wheels_macro.xacro
worlds/: traffic_cones.world  traffic_cones_map.pgm  traffic_cones_map.yaml
